--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
         "core-js": "^3.8.3",
         "devextreme": "22.1.4",
         "devextreme-vue": "22.1.4",
-        "vue": "^3.2.13"
+        "vue": "^3.2.13",
+        "vue-router": "^4.1.3"
     },
     "devDependencies": {
         "@babel/core": "^7.12.16",
