--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "core-js": "^3.8.3",
         "devextreme": "22.1.4",
         "devextreme-vue": "22.1.4",
+        "element-plus": "^2.2.14",
         "vue": "^3.2.13",
         "vue-router": "^4.1.3"
     },
